2019-10-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Fixes and improvements for stack operands.
	* .version:
	  Bump version for advances in -mpdk15 --stack-auto.
	* configure.ac,
	  configure,
	  sim/ucsim/configure.ac,
	  sim/ucsim/configure:
	  Remove check for strerror(), which is part of C89 and used unconditionally in SDCC anyway.

2019-09-30 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Fixes and improvements for stack operands.
	* configure,
	  configure.ac,
	  device/lib/Makefile.in,
	  device/lib/clean.mk,
	  device/lib/pdk15-stack-auto,
	  src/pdk/main.c,
	  support/regression/Makefile.in,
	  support/regression/ports/pdk15-stack-auto:
	  Infrastructure for -mpdk15 --stack-auto regression testing.

2019-09-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fixes for stack operands and rematerialized stack locations.

2019-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fixes for stack operands.

2019-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fix tracking of pseudoregister in shifts.

2019-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc.c:
	  Fix a bug affecting rematerialized addresses cast to integers of multiple widths.

2019-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  src/pdk/ralloc2.cc:
	  Improve register allocation.

2019-09-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  src/pdk/gen.h,
	  src/pdk/ralloc.c,
	  src/pdk/ralloc2.cc:
	  Rematerialize stack adresses, improve handling of on-stack operands.

2019-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  support/regression/tests/gcc-torture-execute-20020402-3.c,
	  support/regression/tests/gcc-torture-execute-divconst-2.c,
	  support/regression/tests/gcc-torture-execute-pr78791.c:
	  Fixes for on-stack operands.

2019-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/addsub.c,