@@ -7,7 +7,9 @@
 	* configure.ac,
 	  configure,
 	  sim/ucsim/configure.ac,
-	  sim/ucsim/configure:
+	  sim/ucsim/configure,
+	  sdccconf_in.h,
+	  sim/ucsim/ddconfig_in.h:
 	  Remove check for strerror(), which is part of C89 and used unconditionally in SDCC anyway.
 
 2019-09-30 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
